# simple-faststream-example

./: docker-compose.yml  pyproject.toml  service_1.py  service_2.py
