[tool.poetry]
name = "faststream-example"
version = "0.1.0"
description = ""
authors = ["npavlin <np@letsnova.ru>"]
readme = "README.md"
packages = [{include = "faststream_example"}]

[tool.poetry.dependencies]
python = "^3.11"
faststream = {extras = ["rabbit"], version = "^0.5.15"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
